2014-08-05  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Fix incorrect registration of
	random-fixnum, which doesn't allow it to be called
	with no arguments.

2014-08-05  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y: Back port from Berkeley Yacc to GNU Bison.
	We need a prototype of yylex that is in scope of the grammar,
	but YYSTYPE is not defined there.

	* parser.l: Bison 3 declares yyparse in y.tab.h, so we have to
	reorder some #includes.

2014-08-02  Kaz Kylheku  <kaz@kylheku.com>

	Big switch to reentrant lexing and parsing.

	* parser.l (YY_INPUT): Stop relying on removed yyin_stream;
	refer to stream via yyextra.
	(yyin_stream, lineno, errors, spec_file_str,
	prepared_error_message): Global variables removed.
	(yyget_column, yyset_column): Missing prototypes not generated by flex
	in bison bridge mode have to be added by us to avoid
	warning.
	(yyerror): Takes parser and scanner as parameters.  Prepared error
	message is now in the parser context.  Calls to other error handling
	functions receive scanner context.
	(yyerr): New function.
	(yyerrorf, yyerrprepf): Takes scanner argument, chases extra data to
	get to parser, and refers to parser variables instead of globals.
	(num_esc): Scanner argument added.
	(%option reentrant, %option bison-bridge, %option extra-type): New
	flex options.
	(grammar): yyscanner added everywhere.
	(end_of_char): Takes scanner argument.
	(parse_init): Removed references to yyin_stream and
	prepared_error_message.
	(parse_reset): Function renamed to open_txr_file. Returns
	results via pointers instead of setting global variables.
	(regex_parse, lisp_parse): Use reentrant parser interface.

	* parser.y (yyerror): Prototype removed.
	(yylex): Prototype moved after grammar, with new arguments.
	(sym_helper, define_transform): Take scanner argument.
	(make_expr): Takes parser argument.
	(rlrec): New static function.
	(rl): Function turned into macro.
	(mkexp, symhlpr): New macros.