@@ -1,5 +1,12 @@
 2014-08-05  Kaz Kylheku  <kaz@kylheku.com>
 
+	* rand.c (make_random_state): Make the seeding behavior
+	portable when the seed is a fixnum or bignum. The goal is that the same
+	values of seed should produce the same random sequences on any
+	platform.
+
+2014-08-05  Kaz Kylheku  <kaz@kylheku.com>
+
 	* eval.c (eval_init): Fix incorrect registration of
 	random-fixnum, which doesn't allow it to be called
 	with no arguments.
